@@ -18,9 +18,9 @@ jobs:
       GIT_COMMIT: ${{ github.sha }}
       BONJOUR_BASE_DIR: ${{ github.workspace }}\deps\bonjour
       QT_BASE_DIR: ${{ github.workspace }}\deps\Qt
-      QT_VERSION: 5.12.6
+      QT_VERSION: 5.15.2
       QT_BASE_URL: http://qt.mirror.constant.com/
-      QT_LIB_DIR: ${{ github.workspace }}\deps\Qt\5.12.6
+      QT_LIB_DIR: ${{ github.workspace }}\deps\Qt\5.15.2
 
     steps:
       - name: Checkout git repo
@@ -39,8 +39,8 @@ jobs:
         if: steps.cache-qt.outputs.cache-hit != 'true'
         run: |
           pip install aqtinstall
-          python -m aqt install --outputdir $env:QT_BASE_DIR --base $env:QT_BASE_URL $env:QT_VERSION windows desktop win64_msvc2017_64
-          cd $env:QT_LIB_DIR\msvc2017_64
+          python -m aqt install --outputdir $env:QT_BASE_DIR --base $env:QT_BASE_URL $env:QT_VERSION windows desktop win64_msvc2019_64
+          cd $env:QT_LIB_DIR\msvc2019_64
           dir
 
       - name: Cache Bonjour
@@ -66,7 +66,7 @@ jobs:
 
       - name: Build
         env:
-          CMAKE_PREFIX_PATH: "${{ env.QT_LIB_DIR }}\\msvc2017_64\\"
+          CMAKE_PREFIX_PATH: "${{ env.QT_LIB_DIR }}\\msvc2019_64\\"
         run: |
           mkdir build
           cd build
