@@ -1,0 +1,7 @@
+{
+  "recommendations": [
+    "ms-vscode.cmake-tools",
+    "twxs.cmake",
+    "llvm-vs-code-extensions.vscode-clangd"
+  ]
+}
