@@ -1,5 +1,3 @@
-cmake_minimum_required (VERSION 3.4)
-
 find_package (Qt5 COMPONENTS Core Widgets Network LinguistTools)
 set (CMAKE_AUTOMOC ON)
 set (CMAKE_AUTORCC ON)
